--- a/frontend/src/app/pages/seden/seden.component.html
+++ b/frontend/src/app/pages/seden/seden.component.html
@@ -29,16 +29,16 @@
                 <div class="card-body text-white">
                   <div class="row">
                     <div class="col float-lg-left"><h5 class="card-title">{{car.carName}}</h5></div>
-                    <div class="col"><small><a [routerLink]="['/booking',car.carID]" class="btn text-end text-white">Booking</a></small></div>
+                    <div class="col"><small><a [routerLink]="['/booking',car.id]" class="btn text-end text-white">Booking</a></small></div>
                   </div>
                 </div>
                 <div class="card-footer text-white border-top border-white py-0">
                   <div class="row">
                     <div class="col">
-                      <p><small>552 hp</small></p>
+                      <p><small>{{car.horsePower}} hp</small></p>
                     </div>
                     <div class="col">
-                      <p><small>5.2 sec</small></p>
+                      <p><small>{{car.speedPerSec}} sec</small></p>
                     </div>
                     <div class="col">
                       <p><small>R {{car.price}}</small></p>
