--- a/frontend/src/app/pages/booking/booking-list/booking-list.component.html
+++ b/frontend/src/app/pages/booking/booking-list/booking-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 col-sm-12 col-md-12 text-center my-3">
             <h1>Bookings</h1>
@@ -6,51 +6,54 @@
     </div>
 
     <div class="row">
-      <table class="table table-responsive" >
-        <thead>
-          <tr>
-            <th scope="col">Booking No</th>
-            <th scope="col" colspan="2">Renter</th>
-            <th scope="col">Car Name</th>
-            <th scope="col">Model</th>
-            <th scope="col">NumberPlate</th>
-            <th scope="col">Make</th>
-            <th scope="col">Price</th>
-            <th scope="col">Pickup CompanyName</th>
-            <th scope="col">Pickup Address</th>
-            <th scope="col">Pick-Up Date</th>
-            <th scope="col">Drop-Off Date</th>
-            <th scope="col">Status</th>
-            <th scope="col" colspan="3">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          
-          <tr *ngFor="let booking of bookings">
-            <th scope="row">{{booking.id}}</th>
-            <td>{{booking.firstname}}</td>
-            <td>{{booking.lastname}}</td>
-            <td>{{booking.carName}}</td>
-            <td>{{booking.model}}</td>
-            <td>{{booking.numberPlate}}</td>
-            <td>{{booking.make}}</td>
-            <td>{{booking.price}}</td>
-            <td>{{booking.companyName}}</td>
-            <td>{{booking.address}}</td>
-            <td>{{booking.pickup_date | date:'medium'}}</td>
-            <td>{{booking.dropoff_date | date:'medium'}}</td>
-            <td *ngIf="booking.bk_status =='approved'">
-              <span class="btn-success status_btn">{{booking.bk_status}}</span>
-            </td>
-            <td *ngIf="booking.bk_status =='pending'">
-              <span class="btn-warning status_btn">{{booking.bk_status}}</span>
-            </td>
-  
-            <td><button class="btn btn-primary"><a class="text-white" [routerLink]="['/editbooking',booking.id]"><i class="bi bi-pencil"></i></a></button></td>
-            <td><button class="btn btn-primary"><i class="bi bi-trash"></i></button></td>
-          </tr>
-        </tbody>
-      </table>
+       <div class="col-lg-12 col-md-12 col-sm-12">
+        <table class="table table-responsive row-border hover" datatable [dtOptions]="dtOptions" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+            <thead>
+              <tr>
+                <th scope="col">Booking No</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Car Name</th>
+                <th scope="col">Model</th>
+                <th scope="col">NumberPlate</th>
+                <th scope="col">Make</th>
+                <th scope="col">Price</th>
+                <th scope="col">Pickup CompanyName</th>
+                <th scope="col">Pickup Address</th>
+                <th scope="col">Pick-Up Date</th>
+                <th scope="col">Drop-Off Date</th>
+                <th scope="col">Status</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              
+              <tr *ngFor="let booking of bookings">
+                <th scope="row">{{booking.id}}</th>
+                <td>{{booking.firstname}}</td>
+                <td>{{booking.lastname}}</td>
+                <td>{{booking.carName}}</td>
+                <td>{{booking.model}}</td>
+                <td>{{booking.numberPlate}}</td>
+                <td>{{booking.make}}</td>
+                <td>{{booking.price}}</td>
+                <td>{{booking.companyName}}</td>
+                <td>{{booking.address}}</td>
+                <td>{{booking.pickup_date | date:'medium'}}</td>
+                <td>{{booking.dropoff_date | date:'medium'}}</td>
+                <td>
+                  <span *ngIf="booking.bk_status =='Approved'" class="btn-success status_btn">{{booking.bk_status}}</span>
+                  <span *ngIf="booking.bk_status =='Pending'" class="btn-warning status_btn">{{booking.bk_status}}</span>
+                  <span *ngIf="booking.bk_status =='Declined'" class="btn-danger status_btn">{{booking.bk_status}}</span>
+                </td>
+                <td>
+                    <button class="btn btn-primary my-1"><a class="text-white" [routerLink]="['/editbooking',booking.id]"><i class="bi bi-pencil"></i></a></button>
+                    <button class="btn btn-primary"><i class="bi bi-trash"></i></button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+       </div>
     </div>
    </div>
     
