--- a/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
+++ b/frontend/src/app/pages/booking/booking-modal/booking-modal.component.html
@@ -81,7 +81,7 @@
                     <label for="inputPassword" class="col-lg-12 col-sm-12 col-form-label">
                       <small>Update Booking Status</small></label>
                         <div class=" col-lg-12 col-sm-12">
-                            <select id="inputState" class="form-control">
+                            <select id="inputState" class="form-control" formControlName="bk_statuss">
                                 <option selected>Select status...</option>
                                 <option value='Approved'>Approved</option>
                                 <option value="Declined">Decline</option>
