--- a/frontend/src/app/pages/edit-user/edit-user.component.html
+++ b/frontend/src/app/pages/edit-user/edit-user.component.html
@@ -67,6 +67,11 @@
                   <div class="mb-3 col-auto">
                     <button type="submit" class="btn" (click)="UpdateUser()">SAVE CHANGES</button>
                   </div>
+
+                  <div class="mb-3 col-auto">
+                    <button [routerLink]="['/users']" type="submit" class="btn">Back</button>
+                  </div>
+                  
                 </div>
               </div>
         </div>
