--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: #08013a;">
+  <footer class="text-center text-white" style="background-color: #241d58;">
     <!-- Grid container -->
     <div class="container pt-4">
       <!-- Section: Social media -->
