--- a/frontend/src/app/pages/users/users.component.html
+++ b/frontend/src/app/pages/users/users.component.html
@@ -1,8 +1,15 @@
 <div class="container justify-content-center">
-  <div class="table-responsive">
-    <table class="table mt-3 table-bordered table-hover">
+
+  <div class="row text-center py-4">
+    <div class="col-lg-12">
+      <h1>User List</h1>
+    </div>
+    
+  </div>
+
+  <div class="table-responsive mb-5">
+    <table class="table mt-3 table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead> 
-            <td colspan="7" class="text-center">List of Users</td>
           <tr>
             <th scope="col">ID</th>
             <th scope="col">First Name</th>
