--- a/frontend/src/app/pages/booking/booking.component.scss
+++ b/frontend/src/app/pages/booking/booking.component.scss
@@ -14,7 +14,7 @@ h2{
 }
 
 .btn{
-    background-color: #F36A5F;
+    background-color: #FFBE16;
     border-color: none;
     border-style: none;
 }
