--- a/frontend/src/app/pages/hatchback/hatchback.component.html
+++ b/frontend/src/app/pages/hatchback/hatchback.component.html
@@ -5,10 +5,10 @@
     <h4 class="head" >TRAVEL IN COMFORT</h4>
   -->
   <div class="text-center">
-    <h1>SEDEN</h1>
+    <h1>HATCHBACK</h1>
     </div>
     <div class="text-center">
-        <h6>Travel in comfort with our SEDEN's</h6>
+        <h6>Travel in comfort with our HATCHBACK's</h6>
     </div>
     <div class="container-fluid py-5">
         <div class="row">
