--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -80,7 +80,7 @@
                 <td>{{booking.pickup_date | date:'medium'}}</td>
                 <td>{{booking.dropoff_date | date:'medium'}}</td>
                 <td>{{booking.numberPlate}}</td>
-                <td>{{booking.fuekType}}</td>
+                <td>{{booking.fuelType}}</td>
                 <td>{{booking.bk_status}}</td>
                 <td><button type="button" class="btn btn-secondary btn-lg">Cancel</button></td>
             </tr>
