--- a/frontend/src/app/pages/booking/booking-list/booking-list.component.html
+++ b/frontend/src/app/pages/booking/booking-list/booking-list.component.html
@@ -48,7 +48,7 @@
                 </td>
                 <td>
                     <button class="btn btn-primary my-1"><a class="text-white" [routerLink]="['/editbooking',booking.id]"><i class="bi bi-pencil"></i></a></button>
-                    <button class="btn btn-primary"><i class="bi bi-trash"></i></button>
+                    <!-- <button class="btn btn-primary"><i class="bi bi-trash"></i></button> -->
                 </td>
               </tr>
             </tbody>
