--- a/frontend/src/app/pages/car-prod/car-prod.component.html
+++ b/frontend/src/app/pages/car-prod/car-prod.component.html
@@ -1,10 +1,11 @@
-<div class="container">
+<div class="container my-5">
     
-    <a href="#" routerLink="/car" class="btn btn-success">Add New Car</a>
+    <a href="#" routerLink="/car" class="btn btn-success mb-4">Add New Car</a>
       
-    <table class="table table-striped table-responsive">
+    <table class="table table-striped table-responsive table-hover">
         <thead>
               <tr>
+                <th>#</th>
                 <th>carName</th>
                 <th>carImage</th>
                 <th>model</th>
@@ -22,8 +23,9 @@
               </tr>
         </thead>
         <tbody>
-              <tr *ngFor="let car of cars;index as i;">
-                
+              <!-- <tr *ngFor="let car of cars"> -->
+                <tr *ngFor="let car of cars">
+                  <td>{{car.id}}</td>
                 <td>{{ car.carName }}</td>
                 <td>
                   <div class="carImg">
@@ -44,7 +46,7 @@
                 <td>
                   <div>
 
-                  <button type="edit" (click)="updateCar()" class="bi bi-pen-fill">Edit</button>
+                  <button type="edit" [routerLink]="['/editCar',car.id]"class="bi bi-pen-fill">Edit</button>
                   </div>
                   
                   <!-- <button type="button" (click)="deleteCar(car.id)" class="btn btn-danger">Delete</button> -->
