--- a/frontend/src/app/pages/hatchback/hatchback.component.scss
+++ b/frontend/src/app/pages/hatchback/hatchback.component.scss
@@ -1,26 +1,40 @@
-.btn{
-    width: 90%;
+.card
+{
+    background-color: #1F1D2C;
+    border-radius: 5%;
+    height: 380px;
+}
+
+.card:hover
+{
     background-color: #FFBE16!important;
-    border-style: none;
-    border-radius: 1rem;
-    // margin-left: -1.3rem;
+    border-radius: 5%;
+    transform: scale(1.04);
+    border: none;
+}
+.card img
+{
+    height: 200px;
+}
+
+.card img:hover
+{
+    transform: rotateY(180deg);
+    animation-delay: 5s;
+    transition: 0.6s
+}
+.btn{
+    height: 80%;
+    margin-top: 0;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    background-color: #FFBE16!important;
     color: black;
+    font-size: 14px;
 
 }
-
-.head{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn:hover
+{
+    background-color: rgb(7, 1, 1);
 }
 
-.card-body .card-title{
-    text-align: center;
-    font-weight: lighter;
-}
-
-.subhead{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
