--- a/frontend/src/app/pages/create/create.component.html
+++ b/frontend/src/app/pages/create/create.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="CarForm" novalidate>
   
         <div class="form-group">
-            <label for="carName">CarName:</label>
+            <label for="carName">Car Name:</label>
             <input 
                 formControlName="carName"
                 id="carName" 
@@ -20,7 +20,7 @@
         </div>
 
         <div class="form-group">
-            <label for="model">model:</label>
+            <label for="model">Car Model:</label>
             <input 
                 formControlName="model"
                 id="model" 
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            <label for="numberPlate">numberPlate:</label>
+            <label for="numberPlate">Number Plate:</label>
             <input 
                 formControlName="numberPlate"
                 id="numberPlate" 
@@ -38,7 +38,7 @@
         </div>
 
         <div class="form-group">
-            <label for="make">make:</label>
+            <label for="make">Car Make:</label>
             <input 
                 formControlName="make"
                 id="make" 
@@ -47,7 +47,7 @@
         </div>
 
         <div class="form-group">
-            <label for="price">price:</label>
+            <label for="price">Price:</label>
             <input 
                 formControlName="price"
                 id="price" 
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            <label for="companyID">companyID:</label>
+            <label for="companyID">Company ID:</label>
             <input 
                 formControlName="companyID"
                 id="companyID" 
@@ -65,7 +65,7 @@
         </div>
 
         <div class="form-group">
-            <label for="category">category:</label>
+            <label for="category">Car Category:</label>
             <input 
                 formControlName="category"
                 id="category" 
@@ -74,7 +74,7 @@
         </div>
 
         <div class="form-group">
-            <label for="status">status:</label>
+            <label for="status">Car Availability:</label>
             <input 
                 formControlName="status"
                 id="status" 
@@ -83,7 +83,7 @@
         </div>
 
         <div class="form-group">
-            <label for="fuelType">fuelType:</label>
+            <label for="fuelType">Fuel Type:</label>
             <input 
                 formControlName="fuelType"
                 id="fuelType" 
@@ -92,7 +92,7 @@
         </div>
 
         <div class="form-group">
-            <label for="horsePower">horsePower:</label>
+            <label for="horsePower">Horse Power:</label>
             <input 
                 formControlName="horsePower"
                 id="horsePower" 
@@ -102,7 +102,7 @@
   
 
         <div class="form-group">
-            <label for="speedPerSec">speedPerSec:</label>
+            <label for="speedPerSec">Speed Per Second:</label>
             <input 
                 formControlName="speedPerSec"
                 id="speedPerSec" 
@@ -111,7 +111,7 @@
         </div>
 
         <div class="form-group">
-            <label for="topSpeed">topSpeed:</label>
+            <label for="topSpeed">Top Speed</label>
             <input 
                 formControlName="topSpeed"
                 id="topSpeed" 
