pushing the admin graph

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,54 +1,54 @@
-.card{
-    background: linear-gradient(180deg, rgba(255, 190,22, 0.6) 0%, rgba(217, 217, 217, 0) 100%);
-    width: 431px;
-}
+// .card{
+//     background: linear-gradient(180deg, rgba(255, 190,22, 0.6) 0%, rgba(217, 217, 217, 0) 100%);
+//     width: 431px;
+// }
 
-.card-title{
-    color: #ffbe16;
-}
+// .card-title{
+//     color: #ffbe16;
+// }
 
-.container{
-    background-image: url("../assets/bg5.jpg");
-    background-size: cover;
-    width: 100%;
-}
+// .container{
+//     background-image: url("../assets/bg5.jpg");
+//     background-size: cover;
+//     width: 100%;
+// }
 
-.btn{
-   background-color: #ffbe16; 
-   color: white;
-   font-weight: bold;
-}
+// .btn{
+//    background-color: #ffbe16; 
+//    color: white;
+//    font-weight: bold;
+// }
 
-.login{
-    color: #ffbe16; 
-    font-weight: bold;
-    display: flex;
-}
+// .login{
+//     color: #ffbe16; 
+//     font-weight: bold;
+//     display: flex;
+// }
 
-input {
-    font-size: small;
-}
+// input {
+//     font-size: small;
+// }
 
-.input-group-text{
-    font-size: small;
-}
+// .input-group-text{
+//     font-size: small;
+// }
 
-.text{
+// .text{
 
-    font-weight: lighter;
-    font-size: small; 
-}
+//     font-weight: lighter;
+//     font-size: small; 
+// }
 
-.input-group{
-    width: 319px;
-}
+// .input-group{
+//     width: 319px;
+// }
 
-.card-body{
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
+// .card-body{
+//     display: grid;
+//     justify-content: center;
+//     align-items: center;
+// }
 
-.label{
-    display: flex;
-}
+// .label{
+//     display: flex;
+// }
