--- a/frontend/src/app/admin-layout/admin-layout.component.html
+++ b/frontend/src/app/admin-layout/admin-layout.component.html
@@ -17,5 +17,16 @@
 </div> -->
 
 <app-admin-header></app-admin-header>
-<router-outlet></router-outlet>
+
+<div class="row">
+    <div class="col-2">
+        <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-10">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
+
+
 <!-- <app-footer></app-footer> -->
