--- a/frontend/src/app/pages/admin-landing/admin-landing.component.html
+++ b/frontend/src/app/pages/admin-landing/admin-landing.component.html
@@ -2,5 +2,8 @@
     <div class="col-lg-6">
         <app-users></app-users>
     </div>
+    <div class="col-lg-6">
+        <app-cars></app-cars>
+    </div>
 </div>
 
