--- a/frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/frontend/src/app/shared/side-bar/side-bar.component.html
@@ -78,7 +78,7 @@
             <span><b> <i class="bi bi-journal-bookmark"></i>  SAVED REPORTS</b></span>
         </div>
         <div class="mb-2">
-            <span><a [routerLink]="['/users']"><i class="bi bi-journal-bookmark-fill"></i> Current Months</a></span>
+            <span><a [routerLink]="['/admin/mon-rt']"><i class="bi bi-journal-bookmark-fill"></i> Current Months</a></span>
         </div>
         <div class="mb-2">
             <span><a [routerLink]="['/users']"><i class="bi bi-journal-bookmark-fill"></i> Last quarter</a></span>
